# FP16

./: CMakeLists.txt  LICENSE  README.md  configure.py  confu.yaml  fp16.spec  meson.build
.github/workflows/: cmake.yml
bench/: alt-array.cc  alt-element.cc  alt.cc  from-alt-array.cc  from-ieee-array.cc  ieee-array.cc  ieee-element.cc  ieee.cc  to-alt-array.cc  to-ieee-array.cc
cmake/: DownloadGoogleBenchmark.cmake  DownloadGoogleTest.cmake  FP16Config.cmake.in
include/: fp16.h
include/fp16/: bitcasts.h  fp16.h  macros.h  psimd.h
test/: alt-from-fp32-value.cc  alt-to-fp32-psimd.cc  alt-to-fp32x2-psimd.cc  ieee-from-fp32-value.cc  ieee-to-fp32-bits.cc  ieee-to-fp32-psimd.cc  ieee-to-fp32x2-psimd.cc
